# rest-pg

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  setup.cfg
app/: __init__.py  config.py  main.py
app/api/: factory.py
app/api_v1/: __init__.py  dependencies.py  errors.py  factory.py
app/api_v1/routes/: tables.py
app/core/: __init__.py  models.py  queries.py  tables.py
tests/: test_queries.py
tests/integration/: __init__.py  conftest.py  test_queries.py  test_tables.py
